--- a/UI/employee/src/app/components/admin/admin-list/admin-list-item/admin-list-item.component.html
+++ b/UI/employee/src/app/components/admin/admin-list/admin-list-item/admin-list-item.component.html
@@ -13,7 +13,8 @@
         JoinDate : <p class="card-text"> {{ item.joinDate | date:'medium' }}</p> 
         Salary : <p class="card-text">{{ item.salary }}</p> 
         <!-- Add more details as needed -->
-        <button class="btn btn-danger" (click)="onDelete(item.id)">Delete</button>
+        <button class="btn btn-danger" (click)="onDelete(item.id)">Delete</button>|
+        <button class="btn btn-outline-info" (click)="onEdit(item.id)">Edit</button>
       </div>
   </div>
 </div>
