--- a/UI/employee/src/app/components/admin/employee-list/employee-list-item/employee-list-item.component.html
+++ b/UI/employee/src/app/components/admin/employee-list/employee-list-item/employee-list-item.component.html
@@ -14,6 +14,7 @@
           Salary : <p class="card-text">{{ item.salary }}</p> 
           <!-- Add more details as needed -->
           <button class="btn btn-danger" (click)="onDelete(item.id)">Delete</button>
+          |<button class="btn btn-outline-info" (click)="onEdit(item.id)">Edit</button>
         </div>
     </div>
   </div>
