--- a/UI/employee/src/app/components/admin/employee-list/employee-list.component.html
+++ b/UI/employee/src/app/components/admin/employee-list/employee-list.component.html
@@ -13,3 +13,7 @@
       </div>
     </div>
 </div>
+<app-confirmation-dialog *ngIf="showConfirmation" 
+                         [message]="'Do you really want to delete this item?'"
+                         (confirm)="onConfirmDelete()"
+                         (cancel)="onCancelDelete()"></app-confirmation-dialog>
