add full name update

--- a/UI/employee/src/app/components/admin/employee-list/employee-list-item/employee-list-item.component.html
+++ b/UI/employee/src/app/components/admin/employee-list/employee-list-item/employee-list-item.component.html
@@ -12,6 +12,7 @@
           Address : <p class="card-text"> {{ item.address }}</p>
           JoinDate : <p class="card-text"> {{ item.joinDate | date:'medium' }}</p> 
           Salary : <p class="card-text">{{ item.salary }}</p> 
+          Telephone : <p class="card-text">{{ item.telephone }}</p> 
           <!-- Add more details as needed -->
           <button class="btn btn-danger" (click)="onDelete(item.id)">Delete</button>
           |<button class="btn btn-outline-info" (click)="onEdit(item.id)">Edit</button>
