--- a/UI/employee/src/app/components/authorize/register/register.component.html
+++ b/UI/employee/src/app/components/authorize/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
     <div class="image-container">
-      <img src="assets/images/register.png" alt="Descriptive Image">
+      <img src="assets/images/Employee.png" alt="Descriptive Image">
     </div>
 
 
