--- a/UI/employee/src/app/components/admin/admin-form/admin-form.component.html
+++ b/UI/employee/src/app/components/admin/admin-form/admin-form.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
     <div class="image-container">
-      <img src="assets/images/register.png" alt="Descriptive Image">
+      <img src="assets/images/edit.png" alt="Descriptive Image">
     </div>
 
 
@@ -65,7 +65,7 @@
         </div>
       </div>
   
-      <button type="submit" [disabled]="!adminForm.valid">Register</button>
+      <button type="submit" [disabled]="!adminForm.valid">Update</button>
     </form>
   </div>
 
