--- a/UI/employee/src/app/components/admin/admin-form/admin-form.component.html
+++ b/UI/employee/src/app/components/admin/admin-form/admin-form.component.html
@@ -64,6 +64,11 @@
           <small class="text-danger">Role is required</small>
         </div>
       </div>
+
+      <div class="form-group">
+        <label for="isActive">Active</label>
+        <input type="checkbox" formControlName="isActive" id="isActive">
+      </div>
   
       <button type="submit" [disabled]="!adminForm.valid">Update</button>
     </form>
